# booksimil

./: .env-example  LICENSE  README.md  docker-compose.yml  pyproject.toml
booksimil/: mybooks.ipynb
